--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sienamarina</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /**/
+
+
+
+    </style>
+    
+
 </head>
 <body>
     <div>
-        <h1> la web de siena hola</h1>
+        <h1> la web de siena </h1>
         <p>siena estudia en itba.</p>
-        <img src="./images/campo-y-torre-cuadrada-en-siena-italia-eg8y0h.jpeg" alt="foto torres en siena">
+        <img src="./images/campo-y-torre-cuadrada-en-siena-italia-eg8y0h.jpeg" alt="foto torres en siena" >
     </div>
     <span></span>
 </body>
