--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                 <h3> ¿Quiénes somos? </h3>
                 <p>Lucila Robredo es lic. en psicología de la Universidad de Belgrano, con posgrado de tres años en psicología clínica en el Hospital de Clínicas y una formación psicoanalítica en la escuela argentina de psicoterapia para graduados (4 años). Doctorando en psicología. Formación literaria en Diálogos Literarios desde 1990 hasta la actualidad. Actualmente, trabaja en clínica psicoanalítica, es docente universitaria en USAL y da talleres de análisis literario.
                 </p>
-                <p>Julio C. Torres es 
-                    Lic. en Psicología, Magíster en Psicoanálisis, Doctorando en Psicología. Práctica privada y docencia universitaria y de pos grado en las materias de clínica psicoanalítica e historia del arte. I Premio de Poesía Antonio Ródenas García -Nieto 2021 con “Todas las islas del mundo”. Publicado por Editorial Pre-Textos. Finalista Premio Lucien Freud 2016 con obra de teatro “No matarás”.</p>
+                <p>Julio C. Torres es Lic. en Psicología, Magíster en Psicoanálisis, Doctorando en Psicología. Práctica privada y docencia universitaria y de pos grado en las materias de clínica psicoanalítica e historia del arte. I Premio de Poesía Antonio Ródenas García -Nieto 2021 con “Todas las islas del mundo”. Publicado por Editorial Pre-Textos. Finalista Premio Lucien Freud 2016 con obra de teatro “No matarás”.</p>
             </div>
             <div class="images">
                 <img src="./images/Lucila Robredo.jpeg" alt="Foto de Lucila Robredo">
