--- a/index.html
+++ b/index.html
@@ -6,19 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lucila robredo - literatura y cine</title>
     <link rel="stylesheet" href="style.css">
+    <script src="recomendacion.js"></script>
+
 
 </head>
 <body>
     <div class="container">
         <div class="head">
             <h1> Lucila Robredo - Literatura y Cine </h1>
+            <ul class="menu">
+                <li><a href="#main-1">Quiénes Somos</a></li>
+                <li><a href="#main-2">Audios</a></li>
+                <li><a href="#main-3">Talleres</a></li>
+                <li><a href="#footer">Contacto</a></li>
+                <li><a href="recomendaciones.html">Recomendaciones</a></li>
+            </ul>
         </div>
-        <div class="main-1">
+        <div id="main-1" class="main-1">
             <div class="text">
                 <h3> ¿Quiénes somos? </h3>
                 <p>Lucila Robredo es lic. en psicología de la Universidad de Belgrano, con posgrado de tres años en psicología clínica en el Hospital de Clínicas y una formación psicoanalítica en la escuela argentina de psicoterapia para graduados (4 años). Doctorando en psicología. Formación literaria en Diálogos Literarios desde 1990 hasta la actualidad. Actualmente, trabaja en clínica psicoanalítica, es docente universitaria en USAL y da talleres de análisis literario.
                 </p>
-                <p></p>
                 <p>Julio C. Torres es Lic. en Psicología, Magíster en Psicoanálisis, Doctorando en Psicología. Práctica privada y docencia universitaria y de pos grado en las materias de clínica psicoanalítica e historia del arte. I Premio de Poesía Antonio Ródenas García -Nieto 2021 con “Todas las islas del mundo”. Publicado por Editorial Pre-Textos. Finalista Premio Lucien Freud 2016 con obra de teatro “No matarás”.</p>
             </div>
             <div class="images">
@@ -28,7 +36,7 @@
         </div>
 
 
-        <div class="main-2">
+        <div id="main-2" class="main-2">
             <div class="text">
                 <h3> Audios</h3>
                 <p>Estos son audios de análisis literario sobre los textos incluidos en esta lista. Cada clase tiene un audio de presentación del autor, y luego uno o varios audios sobre la obra analizada. Al lado de cada texto detallo el tiempo total de la grabación (entre presentación del autor y texto). Envío vía mail el link a los audios de la clase solicitada. Si no tienen los libros, les mando también el PDF de la novela/obra de teatro/cuentos elegidos. Se puede pagar por depósito o transferencia.</p>
@@ -44,7 +52,7 @@
         </div>
 
 
-        <div class="main-3">
+        <div id="main-3" class="main-3">
             <div class="text-center">
                 <h3> Talleres</h3>
                 <li> Mensual de Literatura</li>
@@ -96,7 +104,7 @@
         </div>
 
 
-        <div class="footer">
+        <div id="footer" class="footer">
             <div class="text-center">
                 <h3>Contacto:</h3>
                 <p><strong>Instagram</strong> @lucila.robredo </p>
