--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div id="formulario" class="main-5">
             <div class="text-center">
 
-                <h3>Responde estas preguntas y te recomendaremos un libro:</h2>
+                <h3>Respondé estas preguntas y te recomendamos un libro:</h2>
                 <label for="genero">¿Qué género preferís?</label>
                 <select id="genero">
                     <option value="novela">Novela</option>
