--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h3> Audios</h3>
                 <p>Estos son audios de análisis literario sobre los textos incluidos en esta lista. Cada clase tiene un audio de presentación del autor, y luego uno o varios audios sobre la obra analizada. Al lado de cada texto detallo el tiempo total de la grabación (entre presentación del autor y texto). Envío vía mail el link a los audios de la clase solicitada. Si no tienen los libros, les mando también el PDF de la novela/obra de teatro/cuentos elegidos. Se puede pagar por depósito o transferencia.</p>
                 <div class="dropdown">
-                    <p><a href="pdfs/A-Catálogo de audios.pdf" target="_blank">Catálogo</a></p>
+                    <p><a href="pdfs/A-Catalogo de audios.pdf" target="_blank">Catálogo</a></p>
                   </div>
             </div>
             <div class="images2">
